fix: expand layouts and enforce dark mode

--- a/styles/prism.scss
+++ b/styles/prism.scss
@@ -1290,7 +1290,7 @@ body {
 }
 
 .mdx-content {
-  --ch-scrollycoding-sticker-width: 50%;
+  --ch-scrollycoding-sticker-width: 40%;
   .ch-scrollycoding-sticker {
     top: 152px
   }
